# telemost-recorder

./: .env.example  .gitignore  README.md  install-monitoring-as-a-systemd-service.sh  pyproject.toml  start-monitoring.sh  start-once-now.sh
telemost_record/: __main__.py  browser.py  cli.py  config.py  logging_utils.py  pulse_audio.py  recording.py  service.py
telemost_recorder/: __main__.py  browser.py  cli.py  config.py  display.py  pulse_audio.py  recording.py  service.py  session_lock.py
