[project]
name = "telemost-record"
version = "0.1.0"
description = "Scheduled Yandex Telemost recorder powered by Chromium, Playwright, and ffmpeg"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "APScheduler>=3.10.4,<4",
    "playwright>=1.54.0",
    "pydantic-settings>=2.10.1",
]

[project.scripts]
telemost-record = "telemost_record.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
